# BigMoeOnEdge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  hn_live.html  newest.html  shownew.html
.github/workflows/: ci.yml
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/bmoe/: cache_governor.h  config.h  expert_sidecar.h  expert_source.h  metrics.h  predict_stats.h  recipe.h  runtime.h  session.h
core/src/: config.cpp
core/src/engine/: runtime.cpp  session.cpp  thinking_control.cpp  thinking_control.h
core/src/io/: file_reader.cpp  file_reader.h  platform_io.cpp  platform_io.h
core/src/metrics/: csv_metrics_sink.cpp
core/src/moe/: arch_registry.cpp  cache_governor.cpp  dense_weights.cpp  dense_weights.h  expert_sidecar.cpp  expert_stream_source.cpp  expert_stream_source.h  gguf_offsets.cpp  gguf_offsets.h  router_hook.cpp  router_hook.h  spec_dot.cpp  spec_dot.h
docs/: README.md  adaptive-cache.md  adding-a-model.md  android-memory.md  architecture.md  benchmark-method.md  benchmarks-gpt-oss.md  benchmarks.md  cache-sizing.md  expert-dropping.md  expert-prediction.md  limitations.md  prefetch.md  pressure.md  rewarm.md  roadmap.md  seam.md  session.md  spec-gating.md  telemetry.md  warmup-analysis.md
docs/bench-data/: README.md
docs/bench-data/2026-07-12/: gemma_c2000_l2.csv  gemma_c2000_l2.metrics  gemma_c2000_l4.csv  gemma_c2000_l4.metrics  gemma_c2000_l4_ov.csv  gemma_c2000_l4_ov.metrics  gemma_mmap.csv  gemma_mmap.metrics  gemma_stream.csv  gemma_stream.metrics  gemma_stream_ov.csv  gemma_stream_ov.metrics  qwen_c2000_l2.csv  qwen_c2000_l2.metrics  qwen_c2000_l4.csv  qwen_c2000_l4.metrics  qwen_c4000_l2.csv  qwen_c4000_l2.metrics  qwen_c4000_l4.csv  qwen_c4000_l4.metrics  qwen_c4000_l4_ov.csv  qwen_c4000_l4_ov.metrics  qwen_mmap.csv  qwen_mmap.metrics  qwen_stream.csv  qwen_stream.metrics  qwen_stream_ov.csv  qwen_stream_ov.metrics  summary.md
docs/bench-data/2026-07-12-pr23/: findings.md  gemma_base.csv  gemma_base.metrics  gemma_pf2.csv  gemma_pf2.metrics  gemma_sg.csv  gemma_sg.metrics  gemma_sg_pf2.csv  gemma_sg_pf2.metrics  qwen5k_base.csv  qwen5k_base.metrics  qwen5k_pf1.csv  qwen5k_pf1.metrics  qwen_base.csv  qwen_base.metrics  qwen_pf2.csv  qwen_pf2.metrics  qwen_sg.csv  qwen_sg.metrics  qwen_sg_pf2.csv  qwen_sg_pf2.metrics  summary.md
docs/bench-data/2026-07-13/: gemma_auto_ov.csv  gemma_auto_ov.metrics  gemma_autocap_ov.csv  gemma_autocap_ov.metrics  gemma_base_ov.csv  gemma_base_ov.metrics  gemma_sg_ov.csv  gemma_sg_ov.metrics  qwen_auto_ov.csv  qwen_auto_ov.metrics  qwen_autocap_ov.csv  qwen_autocap_ov.metrics  qwen_base_ov.csv  qwen_base_ov.metrics  qwen_sg_ov.csv  qwen_sg_ov.metrics  summary.md
docs/bench-data/2026-07-14-warmup/: README.md
docs/bench-data/2026-07-15-rewarm/: README.md  app-session-idle-collapse.csv  app-turn-after-rewarm.csv  idle-off.mem  idle-on.mem  turns-off.jsonl  turns-on.jsonl
docs/bench-data/2026-07-15-route-trace/: findings.md  gemma.metrics  gemma.route.csv  gemma.state  gptoss.metrics  gptoss.route.csv  gptoss.state  qwen.metrics  qwen.route.csv  qwen.state  route-trace-bench.sh
docs/bench-data/2026-07-17/: NOTES.md  bench-run-doc.sh  driver-lanes.sh  driver-matrix.sh  gemma_k6.csv  gemma_k6.metrics  gemma_k6.out  gemma_kdef.csv  gemma_kdef.metrics  gemma_kdef.out  gpt_c2000_l4.csv  gpt_c2000_l4.metrics  gpt_c2000_l4.out  gpt_c2000_l8.csv  gpt_c2000_l8.metrics  gpt_c2000_l8.out  gpt_c2000_l8_k2.csv  gpt_c2000_l8_k2.metrics  gpt_c2000_l8_k2.out  gpt_k2.csv  gpt_k2.metrics  gpt_k2.out  gpt_kdef.csv  gpt_kdef.metrics  gpt_kdef.out  qwen_k6.csv  qwen_k6.metrics  qwen_k6.out  qwen_kdef.csv  qwen_kdef.metrics  qwen_kdef.out
docs/bench-data/2026-07-20-cache-replay/: README.md  cliff_k4_c1500.csv  findings.md  gemma-curve.csv  gemma-curve.txt  gptoss-curve.csv  gptoss-curve.txt  iobench-ceiling.md  lanes4_k2.csv  lanes8_k2.csv  layer-lfu-verdict.md  pf1_k2.csv  qwen-curve.csv  qwen-curve.txt  qwen-lfu_a.csv  qwen-lfu_b.csv  qwen-lru_a.csv  qwen-lru_b.csv
docs/bench-data/2026-07-20-sidecar/: findings.md
docs/bench-data/2026-07-21-pinned-dense-ab/: bmoe-20260720-212009.csv  bmoe-20260721-090406.csv  bmoe-20260721-090539.csv  bmoe-20260721-090728.csv  bmoe-20260721-091100.csv  bmoe-20260721-091455.csv  bmoe-20260721-091910.csv  bmoe-20260721-101543.csv  bmoe-20260721-103724.csv  findings.md
docs/bench-data/2026-07-24-desktop-qwen36/: findings.md  pc-A-io4.csv  pc-B-io8.csv  pc-C-drop075.csv  pc-D-t8.csv  pc-E-c5000-io4t4.csv  pc-F-c5000-io8t4.csv  pc-G-c5000-io4t8.csv  pc-H-c5000-combo.csv  pc-I-c5000-overlap.csv  pc-J-auto-overlap-drop.csv
examples/android/: README.md
examples/android/app/: build.gradle
examples/android/app/src/dev/: AndroidManifest.xml
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/io/bigmoeonedge/example/: AppSettings.kt  Components.kt  DownloadWorker.kt  GgufHeader.kt  MainActivity.kt  Markdown.kt  MetricFields.kt  MetricsCsv.kt  MetricsScreen.kt  ModelCatalog.kt  ModelDownloader.kt  ModelManager.kt  ReasoningFilter.kt  RunBus.kt  RunService.kt  SettingsScreen.kt  Telemetry.kt
scripts/: bench-analyze.py  bench-lib.ps1  bench-matrix-rework.ps1  bench-matrix.ps1  bench-pr23-c2000.ps1  bench-pr23-summary.py  bench-prefetch.ps1  bench-run.sh  bench-warmonly.sh  build-android.ps1  build-host.sh  decode-analyze.py  gptoss-matrix.sh  gptoss-mmap.sh  make-tiny-moe.py  rewarm-ab.sh  route-analyze.py  route-replay.py  trace_io.py
tests/: CMakeLists.txt  cache_governor_test.cpp  config_test.cpp  moe_gates.cpp  think_control_test.cpp
tools/: CMakeLists.txt  iobench.cpp  membench.cpp
